WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
33652
REGRESSION: Frames stop appearing after browsing for a while
https://bugs.webkit.org/show_bug.cgi?id=33652
Summary
REGRESSION: Frames stop appearing after browsing for a while
Alexey Proskuryakov
Reported
2010-01-13 22:31:10 PST
Frames that go into b/f cache still count towards the limit of 200 frames on a page (even once cached pages are destroyed). So, frames may cease to be rendered after browsing for a while. Patch forthcoming.
Attachments
proposed fix
(11.81 KB, patch)
2010-01-13 22:38 PST
,
Alexey Proskuryakov
beidson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2010-01-13 22:38:09 PST
Created
attachment 46540
[details]
proposed fix
WebKit Review Bot
Comment 2
2010-01-13 22:43:37 PST
Attachment 46540
[details]
did not pass style-queue: Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 WebCore/page/Page.h:135: More than one command on the same line [whitespace/newline] [4] WebCore/page/Page.h:136: More than one command on the same line [whitespace/newline] [4] Total errors found: 2
Brady Eidson
Comment 3
2010-01-14 10:50:55 PST
Comment on
attachment 46540
[details]
proposed fix r+ (fun layout test)
Alexey Proskuryakov
Comment 4
2010-01-14 11:04:28 PST
Committed <
http://trac.webkit.org/changeset/53274
>.
Darin Adler
Comment 5
2010-01-14 11:07:04 PST
Comment on
attachment 46540
[details]
proposed fix
> +#if !ASSERT_DISABLED > +void Page::checkFrameCountConsistency() const > +{ > + ASSERT(m_frameCount >= 0); > + > + int frameCount = 0; > + for (Frame* frame = mainFrame(); frame; frame = frame->tree()->traverseNext()) > + ++frameCount; > + > + ASSERT(m_frameCount + 1 == frameCount); > +} > +#endif > } // namespace WebCore
Seems to me it should be m_subframeCount, since the main frame is not included in the count. Missing blank line here too.
> +#if ASSERT_DISABLED > + void checkFrameCountConsistency() const { } > +#else > + void checkFrameCountConsistency() const; > +#endif
I normally prefer to keep the #if out of the class definition in a case like this, using a separate inline function definition later in the header.
Alexey Proskuryakov
Comment 6
2010-01-14 12:21:31 PST
> Seems to me it should be m_subframeCount, since the main frame is not included > in the count.
It definitely should! Brady and me agreed that this change shouldn't be part of this patch though.
Simon Fraser (smfr)
Comment 7
2012-09-26 14:14:59 PDT
Renamed to subframe count in
http://trac.webkit.org/changeset/129707
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug